syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "swrc/proto/pb";

message Comment {
    string id = 1;
    string content = 2;
    string account_id = 3;
    string parent_comment_id = 4;
    string snippet_topic_id = 5;
    google.protobuf.Timestamp created_at = 6;
}
