syntax = "proto3";

package proto;

option go_package = "swrc/proto/pb";

message ChooseSnippetTopicBestAnswerRequest{
    string snippet_topic_id = 1;
    string comment_id = 2;
}